--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
+
 @font-face {
   font-family: 'icomoon';
   src:  url('../assets/fonts/icomoon.eot?382saj');
