--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -1,13 +1,13 @@
 .firstnav{
   li{
     line-height: 2.4rem;
-    font-size: 1rem;  
-    letter-spacing: .14rem;
+    font-size: .91rem;  
+    letter-spacing: .13rem;
     font-family: $header_font;
     text-transform: uppercase;
   }
 }
-.secondnav{
+.subnav{
   li{
     line-height: 2.2rem;
     font-size: 1.05rem;
