--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -24,10 +24,16 @@
       justify-content: flex-end;
     }
   }
+  .banner{
+    .banner-shop {
+      top: 15% !important;
+    }
+  }
 }
 @media screen and (max-width: 500px) {
   .navbar .sidebar {
     width: 76%;
+    left: -76%;
   }
 }
 
@@ -36,22 +42,22 @@ html {
 
   // Mobile Portrait
   @media screen and (min-width: 320px) {
-    font-size: 9px;
+    font-size: 5px;
   }
 
   // Mobile Landscape
   @media screen and (min-width: 500px) {
-    font-size: 10px;
+    font-size: 8px;
   }
 
   // Tablet Portrait
   @media screen and (min-width: 750px) {
-    font-size: 12px;
+    font-size: 11px;
   }
 
   // Tablet Landscape
   @media screen and (min-width: 1100px) {
-    font-size: 13px;
+    font-size: 12px;
   }
 
   // Small Laptops
