--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -7,9 +7,11 @@
 @import 'media';
 @import 'fonts';
 
+//components
 @import './components/navbar';
 @import './components/sidebar';
-@import './animations/animation-sidebar';
+@import './components/home.scss';
+@import './components/banner_slide.scss';
 
 body {
   font-family: $header_font;
