--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,12 +1,15 @@
 $header_font: 'Montserrat', sans-serif;
 $nav_second_font: 'Poppins', sans-serif;
 $font_Fjalla: 'Fjalla One', sans-serif;
-$font_acme: 'Acme', sans-serif;;
+$font_acme: 'Acme', sans-serif;
+$font_body: 'Hind', sans-serif;
+
 
 $no: 20;
 $icon_font: 'icomoon';
 
 $header_bg_color: #f3f3f3;
+$footer_color: rgb(112, 109, 109);
 $link_color: rgb(27, 27, 27);
 $border_color:rgb(102, 99, 99);
 $box_shadow_color: rgb(180, 179, 179);
