--- a/src/sass/components/banner_slide.scss
+++ b/src/sass/components/banner_slide.scss
@@ -2,15 +2,14 @@
   position: relative;
   width: 100%;
   height: 34.61vw;
-  overflow: hidden;
   .imagelist {
     display: flex;
     position: absolute;
     top: 0;
     left: 0;
     img {
-      width: 100vw;
-      height: 100%;
+      width: 100%;
+      height: 34.61vw;
     }
   }
   .banner-shop {
@@ -18,16 +17,15 @@
     top: 25%;
     left: 10%;
     // transform: translate(-50%,-50%);
+    font-family: $header_font;
     text-align: center;
     white-space: nowrap;
     div:nth-child(1), div:nth-child(2) {
-      font-family: $font_acme;
-      font-size: 4.3rem;
-      line-height: 4rem;
+      font-size: 3.2rem;
+      font-weight: 600;
     } 
     div:nth-child(3){
-      font-family: $header_font;
-      font-size: 1em;
+      font-size: 1rem;
       letter-spacing: 0.02rem;
       margin-top: 1.3rem;
     }
