--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -8,6 +8,7 @@ $font_body: 'Hind', sans-serif;
 $no: 20;
 $icon_font: 'icomoon';
 
+$font_color: #454545;
 $header_bg_color: #f3f3f3;
 $footer_color: rgb(112, 109, 109);
 $link_color: rgb(27, 27, 27);
