--- a/src/sass/components/navbar.scss
+++ b/src/sass/components/navbar.scss
@@ -1,6 +1,6 @@
 header {
-  background-color: $header_bg_color;
-  padding: 1rem 0;
+  // background-color: $header_bg_color;
+  padding: 2rem 0;
 
   .navbar {
     display: flex;
