added Suspense, lazy loading for routes, modified api call with redux-thunk

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,7 @@
 $header_font: 'Montserrat', sans-serif;
 $nav_second_font: 'Poppins', sans-serif;
-$font_Fjalla: 'Fjalla One', sans-serif;
-$font_acme: 'Acme', sans-serif;
+// $font_Fjalla: 'Fjalla One', sans-serif;
+// $font_acme: 'Acme', sans-serif;
 $font_body: 'Hind', sans-serif;
 
 
