--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -9,10 +9,17 @@
 }
 .subnav{
   li{
-    line-height: 2.2rem;
+    line-height: 2.4rem;
     font-size: 1.05rem;
     letter-spacing: 1px;
     font-family: $nav_second_font;
     text-transform: capitalize;
+    cursor: pointer;
   }
+}
+
+.header_font {
+  font-size: 1.15rem;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
 }
