--- a/src/sass/components/product.scss
+++ b/src/sass/components/product.scss
@@ -1,12 +1,28 @@
 .main-product {
-  margin: 1rem 0;
-  .main-product-category {
-    height: 8rem;
-    line-height: 8rem;
-    font-size: 2.2rem;
-    letter-spacing: 0.4rem;
-    text-transform: uppercase;
+  width: 90%;
+  margin: 1rem auto;
+  .product-category {
+    position: relative;
+    height: 5rem;
+    padding: 0 2rem;
+    line-height: 5rem;
     text-align: center;
-    border-bottom: 1px solid #bdbaba;
+    font-size: 1.8rem;
+    letter-spacing: 0.46rem;
+    text-transform: uppercase;
+  }
+  .products-sort-by {
+    display: flex;
+    justify-content: space-between;
+    padding: .3rem 2rem;
+    width: 100%;
+    border-bottom: 1px solid #d2d2d2;
+    color: $footer_color;
+  }
+  .product-filter-products {
+    display: flex;
+    // background-color: pink;
+    height: 50rem;
+    margin: 1rem 2rem;
   }
 }
