--- a/src/sass/components/drop_down.scss
+++ b/src/sass/components/drop_down.scss
@@ -1,6 +1,7 @@
 .drop-down-list {
   position: relative;
   width: 16rem;
+  min-width: 180px;
   line-height: 1.6rem;
   padding: 0 1rem;
   letter-spacing: 0.1rem;
