--- a/src/sass/components/filter.scss
+++ b/src/sass/components/filter.scss
@@ -6,20 +6,30 @@
       color: $footer_color;
     }
   }
-  .filter-all-colors {
-    display: flex;
-    width: 70%;
-    flex-wrap: wrap;
-    margin: 1rem 0;
-    div {
-      width: 2rem;
-      height: 2rem;
-      margin: 0 1rem 1rem 0;
-      border-radius: 50%;
-      transition: all 0.2s ease;
-      &:hover {
-        cursor: pointer;
-        transform: scale(1.06);
+  .product-filter-filters {
+    width: 86%;
+    & > div {
+      margin: 1rem 0;
+    }
+    .filters-color {
+      p {
+        margin-bottom: 1rem;
+      }
+      & > div {
+        display: flex;
+        width: 70%;
+        flex-wrap: wrap;
+        div {
+          width: 2rem;
+          height: 2rem;
+          margin: 0 1rem 1rem 0;
+          border-radius: 50%;
+          transition: all 0.2s ease;
+          &:hover {
+            cursor: pointer;
+            transform: scale(1.06);
+          }
+        }
       }
     }
   }
